--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.leanback:leanback:1.0.0-beta01'
+    implementation 'androidx.leanback:leanback:1.1.0-alpha01'
 }
