--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,17 @@
           xmlns:tools="http://schemas.android.com/tools"
           package="com.teamb.testbegin">
 
+    <uses-feature android:name="android.software.leanback"
+                  android:required="false" />
+    <uses-feature android:name="android.hardware.touchscreen"
+                  android:required="false" />
+
     <application android:allowBackup="true"
+                 android:banner="@drawable/banner"
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
                  android:supportsRtl="true"
-                 android:theme="@style/AppTheme">
-
+                 android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
     </application>
 
 </manifest>
