--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
     defaultConfig {
         applicationId "com.teamb.testbegin"
         minSdkVersion 28
@@ -27,4 +32,5 @@ dependencies {
     implementation 'androidx.leanback:leanback:1.1.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
+    testImplementation 'org.robolectric:robolectric:4.2'
 }
