--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.leanback:leanback:1.1.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     testImplementation 'org.robolectric:robolectric:4.2'
+
+    // Leanback
+    implementation 'androidx.leanback:leanback:1.1.0-alpha01'
+    implementation "com.android.support:leanback-v17:28.0.0"
+    implementation "com.android.support:preference-leanback-v17:28.0.0"
+    implementation "com.android.support:recyclerview-v7:28.0.0"
+    implementation 'com.android.support:support-v4:28.0.0' // All of v4
+
+    // Non-Leanback Androidx
+    implementation "androidx.preference:preference:1.0.0"
 }
