--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".DetailsActivity"/>
         <activity android:name=".PlaybackActivity"/>
         <activity android:name=".BrowseErrorActivity"/>
+        <activity android:name=".settings.SettingsActivity" />
     </application>
 
 </manifest>
