--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ assembleDebug:
   artifacts:
     paths:
     - app/build/outputs/
-    
+
 assembleRelease:
   stage: build
   script:
@@ -56,7 +56,7 @@ debugTests:
   stage: test
   script:
   - ./gradlew -Pci --console=plain :app:testDebug
-  
+
 functionalTest:
   stage: test
   script:
@@ -65,7 +65,7 @@ functionalTest:
     - echo y | ${ANDROID_HOME}/tools/bin/sdkmanager "system-images;android-${ANDROID_COMPILE_SDK};android-tv;x86"
     - echo y | ${ANDROID_HOME}/tools/bin/sdkmanager --update
     - echo no | ${ANDROID_HOME}/tools/bin/avdmanager create avd -k "system-images;android-${ANDROID_COMPILE_SDK};android-tv;x86" -n test
-    - ${ANDROID_HOME}/tools/emulator -avd test -no-window -no-audio 
+    - ${ANDROID_HOME}/tools/emulator -avd test -no-window -no-audio -engine auto
     - ./android-wait-for-emulator
     - adb shell input keyevent 82
     - ./gradlew cAT
