--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ functionalTest:
     - echo y | ${ANDROID_HOME}/tools/bin/sdkmanager "system-images;android-${ANDROID_COMPILE_SDK};android-tv;x86"
     - echo y | ${ANDROID_HOME}/tools/bin/sdkmanager --update
     - echo no | ${ANDROID_HOME}/tools/bin/avdmanager create avd -k "system-images;android-${ANDROID_COMPILE_SDK};android-tv;x86" -n test
-    - ${ANDROID_HOME}/tools/emulator -avd test -no-window -no-audio -engine auto
+    - ${ANDROID_HOME}/emulator/emulator -avd test -no-window -no-audio
     - ./android-wait-for-emulator
     - adb shell input keyevent 82
     - ./gradlew cAT
