--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     defaultConfig {
         applicationId "com.teamb.testbegin"
-        minSdkVersion 28
+        minSdkVersion 27
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -31,15 +31,19 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'com.github.bumptech.glide:glide:3.8.0' // upgrade to v4 when you can
-    testImplementation 'org.robolectric:robolectric:4.2'
 
     // Leanback
-    implementation 'androidx.leanback:leanback:1.1.0-alpha01'
     implementation "com.android.support:leanback-v17:28.0.0"
     implementation "com.android.support:preference-leanback-v17:28.0.0"
     implementation "com.android.support:recyclerview-v7:28.0.0"
     implementation 'com.android.support:support-v4:28.0.0' // All of v4
 
-    // Non-Leanback Androidx
+    // Androidx
     implementation "androidx.preference:preference:1.0.0"
+    implementation 'androidx.leanback:leanback:1.1.0-alpha01'
+
+    // Testing
+    // testImplementation 'org.robolectric:robolectric:4.2'
+    // testImplementation 'junit:junit:4.12'
+    // androidTestImplementation "androidx.test.ext:junit:1.1.0"
 }
