--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,19 @@ buildscript {
 }
 
 plugins {
-    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC12"
+    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC12" apply false
+    id "org.jlleitschuh.gradle.ktlint" version "7.1.0" apply false
 }
 
 allprojects {
     repositories {
         google()
         jcenter()
+    }
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+    apply plugin: "io.gitlab.arturbosch.detekt"
+    detekt {
+        config = files("detekt-config.yml")
     }
 }
 
