--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,12 +49,17 @@ assembleRelease:
     paths:
     - app/build/outputs/
 
-externalLint:
+detektLint:
   stage: build
   allow_failure: true
   script:
   - ./gradlew detekt
-  - ./gradlew ktlintCheck
+
+ktlintLint:
+  stage: build
+  allow_failure: true
+  script:
+    - ./gradlew ktlintCheck
 
 ######
 # TESTS
