--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="com.teamb.testbegin">
+          package="com.teamb.chzonk">
 
     <uses-feature
             android:name="android.hardware.microphone"
@@ -22,7 +22,7 @@
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
         <activity
-                android:name=".ui.MainActivity"
+                android:name="com.teamb.chzonk.ui.MainActivity"
                 android:banner="@drawable/app_icon_your_company"
                 android:icon="@drawable/app_icon_your_company"
                 android:label="@string/title_activity_main"
@@ -34,8 +34,8 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.BrowseErrorActivity"/>
-        <activity android:name=".ui.settings.SettingsActivity" />
+        <activity android:name="com.teamb.chzonk.ui.BrowseErrorActivity"/>
+        <activity android:name="com.teamb.chzonk.ui.settings.SettingsActivity" />
     </application>
 
 </manifest>
