--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name="android.software.leanback"
             android:required="true"/>
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
             android:allowBackup="false"
             android:banner="@drawable/banner"
@@ -20,9 +23,12 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
-            tools:ignore="GoogleAppIndexingWarning">
+            tools:replace="android:allowBackup"
+            tools:ignore="GoogleAppIndexingWarning"
+            android:name=".DaggerApp">
+
         <activity
-                android:name="com.teamb.chzonk.ui.MainActivity"
+                android:name=".ui.MainActivity"
                 android:banner="@drawable/app_icon_your_company"
                 android:icon="@drawable/app_icon_your_company"
                 android:label="@string/title_activity_main"
@@ -34,8 +40,8 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.teamb.chzonk.ui.BrowseErrorActivity"/>
-        <activity android:name="com.teamb.chzonk.ui.settings.SettingsActivity" />
+        <activity android:name=".ui.BrowseErrorActivity"/>
+        <activity android:name=".ui.settings.SettingsActivity" />
     </application>
 
 </manifest>
