Initial local library base layout

--- a/build.gradle
+++ b/build.gradle
@@ -35,3 +35,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    coroutines_version = '1.1.0'
+    dagger_version = '2.21'
+}
