--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,6 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
-ext {
-    dagger_version = '2.21'
-}
-
 android {
     compileSdkVersion 28
     testOptions {
@@ -66,6 +62,7 @@ dependencies {
     implementation "androidx.preference:preference:1.0.0"
     implementation 'androidx.leanback:leanback:1.1.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    // implementation 'androidx.core:core-ktx:1.1.0-alpha05'
     // implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     // implementation "androidx.room:room-runtime:2.1.0-alpha04"
 
@@ -75,8 +72,8 @@ dependencies {
     */
 
     // Dagger DI
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
+    implementation "com.google.dagger:dagger-android:$rootProject.dagger_version"
 
     // Other
     implementation 'com.jakewharton.timber:timber:4.7.1'
