--- a/locallib/build.gradle
+++ b/locallib/build.gradle
@@ -7,7 +7,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.teamb.local_library"
+        applicationId "com.teamb.locallib"
         minSdkVersion 28
         targetSdkVersion 28
         versionCode 1
