--- a/locallib/src/main/AndroidManifest.xml
+++ b/locallib/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="com.teamb.local_library">
+          package="com.teamb.locallib">
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
