--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
-ext {
-    dagger_version = '2.21'
-}
 
+androidExtensions { experimental = true }
 android {
     compileSdkVersion 28
     testOptions {
@@ -67,7 +65,7 @@ dependencies {
     implementation 'androidx.leanback:leanback:1.1.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     // implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    // implementation "androidx.room:room-runtime:2.1.0-alpha04"
+    implementation "androidx.room:room-runtime:2.1.0-alpha06"
 
     /* // Json
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -75,8 +73,9 @@ dependencies {
     */
 
     // Dagger DI
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$rootProject.dagger_version"
+    implementation "com.google.dagger:dagger-android:$rootProject.dagger_version"
 
     // Other
     implementation 'com.jakewharton.timber:timber:4.7.1'
