--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,7 @@ dependencies {
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    /*// Networking
-    implementation "com.tonyodev.fetch2:fetch2:2.3.6"
-
-    // Glide
+    /*// Glide
     implementation 'com.github.bumptech.glide:glide:3.8.0' // upgrade to v4 when you can
     */
 
@@ -66,11 +63,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     // implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.room:room-runtime:2.1.0-alpha06"
-
-    /* // Json
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
-    */
+    kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycle_version"
+    // implementation "androidx.lifecycle:lifecycle-extensions-ktx:$rootProject.lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$rootProject.lifecycle_version"
 
     // Dagger DI
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
