--- a/locallib/build.gradle
+++ b/locallib/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 
     implementation 'com.android.support:leanback-v17:28.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.apache.commons:commons-compress:1.18'
+    implementation 'com.github.junrar:junrar:3.1.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
 repositories {
     mavenCentral()
