--- a/app/detekt-config.yml
+++ b/app/detekt-config.yml
@@ -175,7 +175,7 @@ exceptions:
   ThrowingNewInstanceOfSameException:
     active: false
   TooGenericExceptionCaught:
-    active: true
+    active: false
     exceptionNames:
      - ArrayIndexOutOfBoundsException
      - Error
