--- a/locallib/detekt-config.yml
+++ b/locallib/detekt-config.yml
@@ -187,7 +187,7 @@ exceptions:
      - Throwable
     allowedExceptionNameRegex: "^(_|(ignore|expected).*)"
   TooGenericExceptionThrown:
-    active: true
+    active: false
     exceptionNames:
      - Error
      - Exception
