--- a/build.gradle
+++ b/build.gradle
@@ -38,5 +38,5 @@ task clean(type: Delete) {
 
 ext {
     dagger_version = '2.21'
-    lifecycle_version = '2.0.0'
+    lifecycle_version = '2.1.0-alpha04'
 }
