--- a/locallib/build.gradle
+++ b/locallib/build.gradle
@@ -1,14 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
-
-
     defaultConfig {
-        applicationId "com.teamb.locallib"
-        minSdkVersion 28
+        minSdkVersion 27
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -24,14 +21,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'com.android.support:leanback-v17:28.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.apache.commons:commons-compress:1.18'
     implementation 'com.github.junrar:junrar:3.1.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
-}
-repositories {
-    mavenCentral()
 }
