--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,9 @@ dependencies {
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    /*// Glide
-        implementation 'com.github.bumptech.glide:glide:3.8.0' // upgrade to v4 when you can
-        */
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
     // Leanback & basic dependencies
     implementation 'com.android.support:leanback-v17:28.0.0'
