--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenCentral()
         maven { url "https://jitpack.io" }
     }
     apply plugin: "org.jlleitschuh.gradle.ktlint"
@@ -40,4 +39,5 @@ task clean(type: Delete) {
 ext {
     dagger_version = '2.21'
     lifecycle_version = '2.1.0-alpha04'
+    coroutines_version = '1.1.1'
 }
