--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+androidExtensions { experimental = true }
 android {
     compileSdkVersion 28
     testOptions {
@@ -40,39 +41,38 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-    /*// Networking
-    implementation "com.tonyodev.fetch2:fetch2:2.3.6"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.coroutines_version"
 
     // Glide
-    implementation 'com.github.bumptech.glide:glide:3.8.0' // upgrade to v4 when you can
-    */
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
-    // Leanback & dependencies
-    implementation "com.android.support:leanback-v17:28.0.0"
-    implementation "com.android.support:preference-leanback-v17:28.0.0"
-    implementation "com.android.support:recyclerview-v7:28.0.0"
+    // Leanback & basic dependencies
+    implementation 'com.android.support:leanback-v17:28.0.0'
+    implementation 'com.android.support:preference-leanback-v17:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0' // All of v4
 
     // Androidx
-    implementation "androidx.preference:preference:1.0.0"
+    implementation 'androidx.preference:preference:1.0.0'
     implementation 'androidx.leanback:leanback:1.1.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    // implementation 'androidx.core:core-ktx:1.1.0-alpha05'
-    // implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    // implementation "androidx.room:room-runtime:2.1.0-alpha04"
 
-    /* // Json
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.github.salomonbrys.kotson:kotson:2.5.0'
-    */
+    // Androidx Lifecycle
+    kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycle_version"
+    // implementation "androidx.lifecycle:lifecycle-extensions-ktx:$rootProject.lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime:$rootProject.lifecycle_version"
 
     // Dagger DI
     kapt "com.google.dagger:dagger-compiler:$rootProject.dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$rootProject.dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$rootProject.dagger_version"
     implementation "com.google.dagger:dagger-android:$rootProject.dagger_version"
 
     // Other
@@ -80,9 +80,5 @@ dependencies {
     implementation 'org.jetbrains.anko:anko:0.10.8'
     implementation 'com.github.hedzr:android-file-chooser:v1.1.16'
 
-    /*// Testing
-    testImplementation 'org.robolectric:robolectric:4.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation "androidx.test.ext:junit:1.1.0"
-    */
+    implementation project(path: ':locallib')
 }
