--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ task clean(type: Delete) {
 }
 
 ext {
-    coroutines_version = '1.1.0'
     dagger_version = '2.21'
+    lifecycle_version = '2.1.0-alpha04'
+    coroutines_version = '1.1.1'
 }
