Committing before pulling localList

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         </activity>
         <activity android:name=".ui.BrowseErrorActivity"/>
         <activity android:name=".ui.settings.SettingsActivity" />
+        <activity android:name=".ui.LibraryActivity"/>
     </application>
 
 </manifest>
