--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/encodings.xml
 .DS_Store
 /build
 /captures
@@ -17,3 +18,7 @@
 .settings/
 .vscode/
 app/.classpath
+
+# Floobits project files
+.floo
+.flooignore
