--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
 
     <application
             android:allowBackup="false"
-            android:banner="@drawable/banner"
-            android:icon="@mipmap/ic_launcher"
+            android:banner="@drawable/red_door_v2"
+            android:icon="@mipmap/red_door_v2"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
@@ -29,10 +29,10 @@
 
         <activity
                 android:name=".ui.MainActivity"
-                android:banner="@drawable/app_icon_your_company"
-                android:icon="@drawable/app_icon_your_company"
+                android:banner="@drawable/red_door_v2"
+                android:icon="@drawable/red_door_v2"
                 android:label="@string/title_activity_main"
-                android:logo="@drawable/app_icon_your_company"
+                android:logo="@mipmap/red_door_v2"
                 android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
