--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     kapt "androidx.room:room-compiler:2.1.0-alpha07"
     implementation "androidx.room:room-runtime:2.1.0-alpha07"
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     // Androidx Lifecycle
     kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycle_version"
