--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,11 +74,11 @@ dependencies {
     implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     // Page Viewer RTL
-    implementation 'com.duolingo.open:rtl-viewpager:1.0.3'
+    // implementation 'com.duolingo.open:rtl-viewpager:1.0.3'
+    implementation 'com.booking:rtlviewpager:1.0.1'
 
     // Androidx Lifecycle
     kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.lifecycle_version"
-    // implementation "androidx.lifecycle:lifecycle-extensions-ktx:$rootProject.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime:$rootProject.lifecycle_version"
 
