--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,4 +96,5 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
 
     implementation project(path: ':locallib')
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
